objects/Contact.object
<CustomObject>
    <fields>
        <fullName>cic_credit__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Line_1__c</fullName>
        <label>Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Line_2__c</fullName>
        <label>Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Unmarried</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Not Disclosed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Number_of_Dependents__c</fullName>
        <label>Number of Dependents</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cic_credit__Primary_Email__c</fullName>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cic_credit__SSN__c</fullName>
        <label>SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__State_Code__c</fullName>
        <label>State Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Suffix__c</fullName>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jr.</fullName>
                </value>
                <value>
                    <fullName>Sr.</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>VI</fullName>
                </value>
                <value>
                    <fullName>VII</fullName>
                </value>
                <value>
                    <fullName>VIII</fullName>
                </value>
                <value>
                    <fullName>IX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isInvalidZip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isInvalidZip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__CreatedBySumo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By SUMO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsGhost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Ghost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__TextOptIn__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Text Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__VoiceOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Reminder Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Affiliate</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>Affiliate_Type__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Affiliate</value>
        </filters>
        <label>Affiliates</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Affiliate</fullName>
        <active>true</active>
        <label>Affiliate</label>
    </recordTypes>
    <recordTypes>
        <fullName>CoApplicant</fullName>
        <active>true</active>
        <label>Co-Applicant</label>
    </recordTypes>
    <recordTypes>
        <fullName>PrimaryClient</fullName>
        <active>true</active>
        <label>Primary Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>true</active>
        <label>Prospect</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_Is_Required_on_Update</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!ISNEW(), ISBLANK(AccountId), NOT($Setup.AutomationBypass__c.ContactAutomationByPass__c))</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Household is Required !</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CreditScoreFormat</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($Setup.AutomationBypass__c.ContactAutomationByPass__c),
NOT(ISBLANK(CreditScore__c)) &amp;&amp; NOT( REGEX(TEXT(CreditScore__c), &quot;[0-9]{3}&quot;) )
)</errorConditionFormula>
        <errorDisplayField>CreditScore__c</errorDisplayField>
        <errorMessage>Credit Score must be 3 Digit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmailRequiredOnChange</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($Setup.AutomationBypass__c.ContactAutomationByPass__c),
AND( ISCHANGED(Email ) ,  ISBLANK(Email),  (PRIORVALUE(Email) &lt;&gt; NULL) )
)</errorConditionFormula>
        <errorMessage>Please enter Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmailorPhoneRequired</fullName>
        <active>false</active>
        <errorConditionFormula>IF(AND( ISBLANK( Email ) , ISBLANK( Phone ) ), true, false)</errorConditionFormula>
        <errorMessage>Please enter either Email or Phone Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FirstNameRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($Setup.AutomationBypass__c.ContactAutomationByPass__c),
ISBLANK( FirstName )
)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>Please enter First name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HouseholdSizeLimitRule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($Setup.AutomationBypass__c.ContactAutomationByPass__c),
OR( (HouseholdSize__c &lt; 1), (HouseholdSize__c &gt; 99))
)</errorConditionFormula>
        <errorDisplayField>HouseholdSize__c</errorDisplayField>
        <errorMessage>Household size should be between 1 to 99</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Validation</fullName>
        <active>true</active>
        <description>Should consists of 10 digits.
Should not consistently repeated numbers (E.g - 1111111111)
Should not be having value as 1234567890
Should not include special characters</description>
        <errorConditionFormula>AND(
NOT($Setup.AutomationBypass__c.ContactAutomationByPass__c),
!ISBLANK(Phone), (NOT(REGEX(Phone, &quot;\\D*?(\\d\\D*?){10}&quot;)) ||
				!REGEX( Phone , &quot;[0-9]{10}&quot;))
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please enter a valid phone number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSNFormat</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($Setup.AutomationBypass__c.ContactAutomationByPass__c),
AND(
NOT(
    OR(
    ISBLANK(SSN__c),
    REGEX( SSN__c , &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;),
    REGEX( SSN__c , &quot;[0-9]{9}&quot;)
    )
)
)
)</errorConditionFormula>
        <errorDisplayField>SSN__c</errorDisplayField>
        <errorMessage>SSN must be in this format: 999-99-9999.</errorMessage>
    </validationRules>
</CustomObject>